seo: add meta tags and social preview logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,21 @@
     <title>Happy Rose Day, My Love 🌹</title>
     <meta name="description"
         content="A magical, romantic Rose Day tribute for someone special. Floating petals, love letters, and surprises.">
+    <!-- SEO & Social Media Meta Tags -->
+    <meta property="og:title" content="Happy Rose Day, My Love 🌹">
+    <meta property="og:description"
+        content="A magical, romantic Rose Day tribute. Floating petals, love letters, and surprises.">
+    <meta property="og:image" content="magical_rose.png">
+    <meta property="og:url" content="https://nextgencode13.github.io/happy-rose-day-2026/">
+    <meta property="og:type" content="website">
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="Happy Rose Day, My Love 🌹">
+    <meta name="twitter:description" content="A magical, romantic Rose Day tribute.">
+    <meta name="twitter:image" content="magical_rose.png">
+
+    <!-- Favicon -->
+    <link rel="icon" type="image/png" href="magical_rose.png">
+
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
