feat: Introduce new rose imagery, a drifting background effect, and update page metadata and titles.

--- a/index.html
+++ b/index.html
@@ -1,26 +1,54 @@
+<!-- 
+ 
+
+#   #  ###  ####  ####  #   #       ####   ###   ###  #####       ####   ###  #   # 
+#   # #   # #   # #   #  # #        #   # #   # #     #           #   # #   #  # #  
+##### ##### ####  ####    #         ####  #   #  ###  ####        #   # #####   #   
+#   # #   # #     #       #         #  #  #   #     # #           #   # #   #   #   
+#   # #   # #     #       #         #   #  ###   ###  #####       ####  #   #   #   
+
+
+
+ ###  ####  #####  ###  ##### ##### ####        ####  #   #       
+#     #   # #     #   #   #   #     #   #       #   #  # #        
+#     ####  ####  #####   #   ####  #   #       ####    #         
+#     #  #  #     #   #   #   #     #   #       #   #   #         
+ ###  #   # ##### #   #   #   ##### ####        ####    #         
+
+
+              ###  #   # #   # ####  #   #  ###  #   # 
+            #   # ##  # #   # #   # #   # #   # #   # 
+####        ##### # # # #   # ####  ##### ##### #   # 
+            #   # #  ## #   # #   # #   # #   #  # #  
+            #   # #   #  ###  ####  #   # #   #   #   
+
+
+
+-->
+
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Happy Rose Day, My Love 🌹</title>
+    <title>Happy Rose Day🌹</title>
     <meta name="description"
         content="A magical, romantic Rose Day tribute for someone special. Floating petals, love letters, and surprises.">
     <!-- SEO & Social Media Meta Tags -->
-    <meta property="og:title" content="Happy Rose Day, My Love 🌹">
+    <meta property="og:title" content="Happy Rose Day🌹">
     <meta property="og:description"
         content="A magical, romantic Rose Day tribute. Floating petals, love letters, and surprises.">
-    <meta property="og:image" content="magical_rose.png">
+    <meta property="og:image" content="rose-day-logo-2.0.jpg">
     <meta property="og:url" content="https://nextgencode13.github.io/happy-rose-day-2026/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Happy Rose Day, My Love 🌹">
+    <meta name="twitter:title" content="Happy Rose Day 🌹">
     <meta name="twitter:description" content="A magical, romantic Rose Day tribute.">
-    <meta name="twitter:image" content="magical_rose.png">
+    <meta name="twitter:image" content="rose-day-logo-2.0.jpg">
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="magical_rose.png">
+    <link rel="icon" type="image/jpeg" href="rose-day-logo-2.0.jpg">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -158,6 +186,10 @@
                 <div class="polaroid" style="--angle: 3deg">
                     <img src="moment2.png" alt="Memory 2">
                     <div class="caption">Forever to go</div>
+                </div>
+                <div class="polaroid" style="--angle: 6deg">
+                    <img src="hero_rose.png" alt="Hero Rose">
+                    <div class="caption">The Perfection of a Rose</div>
                 </div>
                 <div class="polaroid" style="--angle: -2deg">
                     <img src="moment3.png" alt="Memory 3">
