feat: enhance SEO and social media meta tags for improved sharing
- Updated 'og:image' and 'twitter:image' to absolute URLs to ensure thumbnails render correctly on WhatsApp, LinkedIn, and Teams.
- Added explicit 'og:image:width' (1200) and 'og:image:height' (630) to trigger instant preview generation.
- Included 'og:image:secure_url' and 'og:image:type' (image/jpeg) for maximum social platform compatibility.
- Added 'keywords', 'author', and 'robots' meta tags to improve global search engine indexing.
- Defined 'og:site_name' and 'og:image:alt' for enhanced branding and accessibility.

--- a/index.html
+++ b/index.html
@@ -35,17 +35,33 @@
     <title>Happy Rose Day🌹</title>
     <meta name="description"
         content="A magical, romantic Rose Day tribute for someone special. Floating petals, love letters, and surprises.">
-    <!-- SEO & Social Media Meta Tags -->
-    <meta property="og:title" content="Happy Rose Day🌹">
-    <meta property="og:description"
-        content="A magical, romantic Rose Day tribute. Floating petals, love letters, and surprises.">
-    <meta property="og:image" content="rose-day-logo-2.0.jpg">
-    <meta property="og:url" content="https://nextgencode13.github.io/happy-rose-day-2026/">
+    <meta name="keywords" content="Rose Day, Valentine Week, romantic website, love letter, 3D rose, digital gift">
+    <meta name="author" content="Anubhav">
+    <meta name="robots" content="index, follow">
+
+    <!-- Open Graph / Facebook / WhatsApp -->
     <meta property="og:type" content="website">
-    <meta name="twitter:card" content="summary_large_image">
-    <meta name="twitter:title" content="Happy Rose Day 🌹">
-    <meta name="twitter:description" content="A magical, romantic Rose Day tribute.">
-    <meta name="twitter:image" content="rose-day-logo-2.0.jpg">
+    <meta property="og:url" content="https://nextgencode13.github.io/happy-rose-day-2026/">
+    <meta property="og:title" content="Happy Rose Day 🌹">
+    <meta property="og:description"
+        content="A magical, romantic Rose Day tribute with floating petals, love letters, and surprises.">
+    <meta property="og:image" content="https://nextgencode13.github.io/happy-rose-day-2026/rose-day-logo-2.0.jpg">
+    <meta property="og:image:secure_url"
+        content="https://nextgencode13.github.io/happy-rose-day-2026/rose-day-logo-2.0.jpg">
+    <meta property="og:image:width" content="1200">
+    <meta property="og:image:height" content="630">
+    <meta property="og:image:type" content="image/jpeg">
+    <meta property="og:image:alt" content="Happy Rose Day 2026 Logo">
+    <meta property="og:site_name" content="Happy Rose Day 2026">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://nextgencode13.github.io/happy-rose-day-2026/">
+    <meta property="twitter:title" content="Happy Rose Day 🌹">
+    <meta property="twitter:description"
+        content="A magical, romantic Rose Day tribute with floating petals, love letters, and surprises.">
+    <meta property="twitter:image" content="https://nextgencode13.github.io/happy-rose-day-2026/rose-day-logo-2.0.jpg">
+    <meta property="twitter:image:alt" content="Happy Rose Day 2026 Logo">
 
     <!-- Favicon -->
     <link rel="icon" type="image/jpeg" href="rose-day-logo-2.0.jpg">
